--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/variaveis.css">
     <link rel="stylesheet" href="./src/css/conteudo-principal.css">
+    <link rel="stylesheet" href="./src/css/responsividade.css">
 </head>
 <body>
     
