--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
                 <div class="bandeira-moedas">
                     <img src="src/img/bandeira-eua.svg" alt="aqui as bandeiras será alternada para eua e euro" id="bandeiras">
-                    <p>Dólar Americano</p>
+                    <p id="moeda-texto">Dólar Americano</p>
                     <span id="moedas-valores">R$ 10.000,00</span>
                 </div>
 
